[tool.poetry]
name = "didyouknow"
version = "0.1.0"
description = ""
authors = ["Ben Godfrey <ben@ben2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^24.6.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
